--- a/public/index.html
+++ b/public/index.html
@@ -106,9 +106,60 @@
 
   <script src="https://media.twiliocdn.com/sdk/js/chat/v3.3/twilio-chat.min.js"></script>
 
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-messaging.js"></script>
+  
   <script src="https://apis.google.com/js/platform.js" async defer></script>
   <script type="text/javascript" src="/js/md5.js"></script>
   <script type="text/javascript" src="/js/index.js"></script>
+
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+      https://firebase.google.com/docs/web/setup#available-libraries -->
+
+  <script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+      apiKey: "AIzaSyBPsLQV1lMV--SpHdBmcszEZqxGv3Gz8JQ",
+      authDomain: "curacall.firebaseapp.com",
+      databaseURL: "https://curacall.firebaseio.com",
+      projectId: "curacall",
+      storageBucket: "curacall.appspot.com",
+      messagingSenderId: "895450927675",
+      appId: "1:895450927675:web:9f636681a6a3e133ea021e"
+    };
+    
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+
+    console.log('firebase', firebase);
+
+    if (firebase && firebase.messaging()) {
+      // requesting permission to use push notifications
+      firebase.messaging().requestPermission().then(() => {
+        // getting FCM token
+        firebase.messaging().getToken().then((fcmToken) => {
+          console.log('fcmToken', fcmToken);
+          // continue with Step 7 here 
+          // ... 
+          // ... 
+        }).catch((err) => {
+          // can't get token
+          console.log(`can't get token`, err);
+        });
+      }).catch((err) => {
+        console.log(`can't request permission or permission hasn't been granted to the web app by the user`, err);
+        // can't request permission or permission hasn't been granted to the web app by the user
+      });
+    } else {
+      // no Firebase library imported or Firebase library wasn't correctly initialized
+      console.log(`no Firebase library imported or Firebase library wasn't correctly initialized`);
+
+    }
+
+    </script>
+  
 </body>
 </html>
 
